# simpleRAG

./: .env.example  .gitignore  DATA_PIPELINE.md  LOG.md  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
app/: app.py
docs/: ARCHITECTURE.md
src/simple_rag/: models.py  settings.py
src/simple_rag/data_pipeline/: run.py
src/simple_rag/data_pipeline/utils/: data_transformation_helpers.py
src/simple_rag/rag/: evaluate.py  generator.py  pipeline.py  retrieval.py  router.py
src/simple_rag/rag/utils/: evaluation_helpers.py  generation_helpers.py  gold_data_helpers.py  retrieval_helpers.py  routing_helpers.py
src/simple_rag/utils/: io_helpers.py  llm_helpers.py  pinecone_helpers.py  text_helpers.py
tests/: conftest.py  test_data_transformation.py  test_evaluate.py  test_llm_helpers.py  test_models.py  test_preprocess.py  test_rag_integration.py  test_retrieval.py  test_router.py  test_text_helpers.py
